--- a/templates/admin_panal/navbar.html
+++ b/templates/admin_panal/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top color">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand"><i class="fa fa-user"> Admin Panel Pro </i></a>
+            <a href="{% url 'Home'%}" class="navbar-brand"><i class="fa fa-user"> Admin Panel Pro </i></a>
         </div>
         <div>
             <ul class="nav navbar-nav navbar-right">
